--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.github.markushi:android-ui:1.2'
-
+    compile files('libs/volley.jar')
 }
